--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <title>Cillianbc.com</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+    <header></header>
+    <h1>Hey There !!</h1>
 </body>
 </html>
