--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Cillianbc.com</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
     <header></header>
     <h1>Hey There !!</h1>
