Logo and small text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Cillianbc, webby wonder</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -22,7 +22,7 @@
 			<header id="header">
 
 				<!-- Logo -->
-					<h1 id="logo"><a href="#">Big Picture</a></h1>
+					<h1 id="logo"><a href="#">Cillianbc</a></h1>
 				
 				<!-- Nav -->
 					<nav id="nav">
@@ -43,9 +43,7 @@
 					<header>
 						<h2>Hey.</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed
-					by <a href="http://html5up.net">HTML5 UP</a>, built on <a href="http://skeljs.org">skelJS</a>,
-					and released for free under the <a href="http://html5up.net/license/">Creative Commons Attribution 3.0 license</a>.</p>
+					<p>I'm <strong>Cillianbc</strong><br /> Developer and curater of all things Web related.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -167,8 +165,8 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li>
-						<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+						<li>&copy; Cillianbc</li>
+						<li>Developed by: <a href="http://cillianbc.com/">Cillianbc</a></li>
 					</ul>
 			
 			</footer>
