--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="sss/sss.min.js"></script>
+<link rel="stylesheet" href="sss/sss.css" type="text/css" media="all">
 
+<script>
+jQuery(function($) {
+$('.slider').sss();
+});
+</script>
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
             <script>window.html5 || document.write('<script src="js/Shiv/html5shiv.js"><\/script>')</script>
@@ -29,7 +37,13 @@
             <div class="main wrapper clearfix">
 
                 <article>
-                    <a href="img/cbcdevices.jpg"><img  class="featured" src="img/cbcdevices.jpg" alt="Featured Image"></a>
+                    <div class="slider">
+<img src="img/bmsurveys.png" />
+<img src="img/gelish.png" />
+<div class="just_text">This one's just text.</div>
+<img src="img/Outline_com_au-home2.png" />
+<div><img src="img/cbcdevices.jpg" /><span class="caption">This one has a caption</span></div>
+</div>
                     <div class="work"><h2>Featured Work</h2>
                         <ul>
                             <li><a href="http://bmsurveys.com.au/"><img src="img/bmsurveys.png" alt ="BM Surveys Homepage"></a><h3>BM Surveys</h3><a id="link"  href="http://bmsurveys.com.au/">bmsurveys.com.au</a></li>
