Revisions after submission review

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+ <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,58 +8,44 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
       <div class="container">
-        <a href="index.html"><img class="logo" src="img/cillianbc-Logo@2x.png" alt="Cillianbc Logo"></a>
-          <div class="sub-text"><h2>Cillianbc, Webby Wonder</h2>
-        <p>I'm in the internet....somewhere</p></div>
-      </div>
-    </div>
-        <div class="container">
-            <a href="index.html"><img class="featured" src="img/cbcdevices.jpg" alt="Many Devices" ></a>
+        <div class="row header">
+          <div class="col-md-6"><a href="index.html"><img class="img-responsive" id="logo" src="img/cillianbc-Logo@2x.png" alt="Cillianbc Logo"></a></div>
+          <div class="row, subtext"><h2>Cillianbc, Webby Wonder</h2>
+            <p>I'm in the internet....somewhere</p></div>
         </div>
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Bm Surveys</h2>
-          <a href="http://bmsurveys.com.au/"><img class="img-responsive" src="img/bmsurveys.png" alt="Surveys Screenshot"></a>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="row">
+          <div class="col-md-12, featured">
+            <a href="index.html"><img class="featured img-responsive" src="img/cbcdevices.jpg" alt="Many Devices" ></a>
+          </div>
         </div>
-        <div class="col-md-4">
-          <h2>Gelish-Australia</h2>
-          <a href="http://www.gelish-australia.com.au/"><img class="img-responsive" src="img/gelish.png" alt="Gelish Screenshot"></a>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Outline Planning</h2>
-          <a href="http://www.outline.com.au/"><img class="img-responsive" src="img/Outline_com_au-home2.png" alt="Outline Screenshot"></a>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
 
-      <hr>
-
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Bm Surveys</h2>
+            <a href="http://bmsurveys.com.au/"><img class="img-responsive" src="img/bmsurveys.png" alt="Surveys Screenshot"></a>
+            <p class="button"><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+            <h2>Gelish-Australia</h2>
+            <a href="http://www.gelish-australia.com.au/"><img class="img-responsive" src="img/gelish.png" alt="Gelish Screenshot"></a>
+            <p class="button"><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+            <h2>Outline Planning</h2>
+            <a href="http://www.outline.com.au/"><img class="img-responsive" src="img/Outline_com_au-home2.png" alt="Outline Screenshot"></a>
+            <p class="button"><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          </div>
+        </div>
       <footer>
         <p>&copy; cillianbc 2014</p>
       </footer>
-    </div> <!-- /container -->\
+    </div>
     </body>
 </html>
