--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
 
         <div class="row">
+          <div class="col-md-12"><h1>Featured Work</h1></div>
           <div class="col-md-4">
             <h2>Bm Surveys</h2>
             <a href="http://bmsurveys.com.au/"><img class="img-responsive" src="img/bmsurveys.png" alt="Surveys Screenshot"></a>
