Second evaluation Changes
Removed view details button, new favicon added, css changes made

--- a/index.html
+++ b/index.html
@@ -6,44 +6,40 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <title>Cillianbc, a webby wonder</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
     </head>
     <body>
       <div class="container">
         <div class="row header">
           <div class="col-md-6"><a href="index.html"><img class="img-responsive" id="logo" src="img/cillianbc-Logo@2x.png" alt="Cillianbc Logo"></a></div>
-          <div class="row, subtext"><h2>Cillianbc, Webby Wonder</h2>
-            <p>I'm in the internet....somewhere</p></div>
+          <div class="subtext"><h2>Cillianbc, Webby Wonder</h2>
+            <h2>I'm in the internet....somewhere</h2></div>
         </div>
         <div class="row">
-          <div class="col-md-12, featured">
-            <a href="index.html"><img class="featured img-responsive" src="img/cbcdevices.jpg" alt="Many Devices" ></a>
+          <div class="col-md-12">
+            <a href="index.html"><img class="img-responsive, featured" src="img/cbcdevices.jpg" alt="Many Devices" ></a>
           </div>
         </div>
-
-        <div class="row">
+        <section>
           <div class="col-md-12"><h1>Featured Work</h1></div>
           <div class="col-md-4">
             <h2>Bm Surveys</h2>
             <a href="http://bmsurveys.com.au/"><img class="img-responsive" src="img/bmsurveys.png" alt="Surveys Screenshot"></a>
-            <p class="button"><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <h2>Gelish-Australia</h2>
             <a href="http://www.gelish-australia.com.au/"><img class="img-responsive" src="img/gelish.png" alt="Gelish Screenshot"></a>
-            <p class="button"><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
           </div>
           <div class="col-md-4">
             <h2>Outline Planning</h2>
             <a href="http://www.outline.com.au/"><img class="img-responsive" src="img/Outline_com_au-home2.png" alt="Outline Screenshot"></a>
-            <p class="button"><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
           </div>
-        </div>
+        </section>
       <footer>
         <p>&copy; cillianbc 2014</p>
       </footer>
